payment-hub-active-active/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: payment-hub-aa
  labels:
    fis.demo/mode: active-active
